# sachmis

./: .gitignore  README.md  pyproject.toml
scripts/: aml.py  atic.py  gtc.py  mpc.py  robol-hw1.py  rodyn.py
src/sachmis/: __init__.py  __main__.py
src/sachmis/cli/: __main__.py  app.py  args.py  bases.py  files.py  fire.py  setup.py  thunder.py  tree.py
src/sachmis/cli/command/: __init__.py  collection.py  fire.py  loop.py  test_picker.py  thunder.py  tree.py
src/sachmis/cli/subapp/: __init__.py  bases.py  biome.py  files.py  forest.py  init.py  show.py
src/sachmis/config/: __init__.py  defaults.py  manager.py  model.py  model_param.py  names.py  paths.py  settings.py
src/sachmis/config/model/: __init__.py  dummy.py  family.py  gemini.py  grok.py
src/sachmis/core/: capstone.py  conductor.py  executor.py  grok.py  model.py  uploader.py
src/sachmis/core/model/: __init__.py  agent.py  dummy.py  gemini.py  grok.py
src/sachmis/data/: __init__.py  arboreal.py  camp.py  data.py  files.py  filesystem.py  forest.py  manager.py  prompt.py  response.py  uploader.py
src/sachmis/data/arboreal/: __init__.py  base.py  biome.py  forest.py  sprout.py  tree.py
src/sachmis/data/uploader/: __init__.py  google.py  uploader.py  xai.py
src/sachmis/tui/: __init__.py  app.py
src/sachmis/utils/: __init__.py  config.py  exceptions.py  log.py  parse.py  pick.py  picker.py  print.py
src/sakhmat/: __init__.py
src/sakhmat/cli/: __main__.py  bases.py  forest.py  loop.py  show.py  tree.py
src/sakhmat/core/: data.py  forest.py  gemini.py  models.py
src/sakhmat/tools/: tail_logs.py
src/sakhmat/tui/: __init__.py
src/sakhmat/utils/: config.py  image.py  path.py  print.py
tests/data/: test_manager.py
tests/utils/: test_parse.py
