[project]
name = "sachmis"
version = "0.4.0a8"
description = "Launch LLM calls, pipelines and handle local data management"
readme = "README.md"
authors = [{ name = "silvan", email = "silvasta3@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "boltons>=25.0.0",
  "dotenv>=0.9.9",
  "filelock>=3.25.2",
  "google-genai>=1.59.0",
  "loguru>=0.7.3",
  "pick>=2.4.0",
  "protobuf>=6.33.1",
  "rich>=14.1.0",
  "silvasta>=0.1.0",
  "tenacity>=9.1.4",
  "textual>=7.3.0",
  "tqdm>=4.67.1",
  "typer>=0.19.2",
  "xai-sdk>=1.2.0",
]

[tool.uv.sources]
silvasta = { path = "../../sstcore/latest", editable = true }
# silvasta = { path = "../../sstcore/main", editable = false }

[project.scripts]
sachmis = "sachmis.cli.app:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.sachmis.logging]
level = "WARNING"
file_name = "sachmis.log"
log_dir = "logs"
rotation = "10 MB"
retention = "1 week"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  "E",  # E: pycodestyle errors
  "F",  # F: Pyflakes
  "I",  # I: isort (import sorting)
  "UP", # UP: pyupgrade (modernize syntax)
  "B",  # B: flake8-bugbear (finds likely bugs) 
  "N",  # N: pep8-naming
]
ignore = [
  "E501", # Ignore long lines: only format, not error on them
]
